--- a/views/farmarkt/home.ejs
+++ b/views/farmarkt/home.ejs
@@ -13,7 +13,7 @@
 
 
 <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZXh0ZXJuYWwtbWFzdGVycGllY2UiLCJhIjoiY2t2OGp1MDV2MWc3NDJyb2t1Nng1cW9meiJ9.122aI9wm7M9QEVAywCfXyA';
+    mapboxgl.accessToken = MAPBOX_TOKEN;
     const markets = {features: <%- JSON.stringify(markets)%>}
 </script>
 
