--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,12 +8,14 @@
           <button class="btn" id="nav-toggle"><span class="material-icons">menu</span></button>
         </li>
       
-        <li class="nav-link">Plan Your Visit<span class="material-icons">
+        <li class="nav-link">For Visitors<span class="material-icons">
           expand_less
           </span></i>
           <ul class="nav-drop">
-            <li><a href="/visit">List of Markets</a></li>
+            <li><a href="#new">What's New</a></li>
             <li><a href="#calendar">Calendar</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="/visit">List of Markets</a></li>
           </ul>
         </li>
         
@@ -26,7 +28,7 @@
           </ul>
         </li>
          
-        <li class="nav-link">About Us</li>
+        <li class="nav-link">Contact</li>
         <li class="nav-item"><button class="btn">Farmers Login</button></li>
         
       </ul>
