--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -310,9 +310,42 @@ footer p {
   display: none;
 }
 
-.show {
+.secondary-page {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+
+.single-market {
   color: #333745;
   z-index: 1;
+  background-color: white;
+  padding: 4rem 2rem;
+  margin-top: 2rem;
+  display: flex;
+  align-items: baseline;
+}
+
+.market--title {
+  flex-grow: 1;
+  margin-bottom: 2rem;
+  width: 25%;
+  font-size: large;
+}
+
+.market-desc-group {
+  flex-grow: 1;
+  width: 75%;
+}
+
+.market--description {
+  font-size: larger;
+}
+
+.fb-page {
+  position: relative;
+  left: -50%;
+  margin-bottom: 2rem;
 }
 
 @-webkit-keyframes move-to-right {
