--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/cs_CZ/sdk.js#xfbml=1&version=v15.0" nonce="di4ahTAt"></script>
     
     <div class="body-img"></div>
     <div class="body-container">
