--- a/public/sass/components/_map.scss
+++ b/public/sass/components/_map.scss
@@ -1,16 +1,14 @@
 #map {
-    border-radius: 15px;
-    height: 400px;
+    height: 50%;
   }
   
   
   #cluster-map {
-      width: 50vw;
-      height: 100vh;
-      position: absolute;
-      left: 0;
-      // transform: translate(-50%);
+      width: 100%;
+      height: 50%;
       border-radius: 10px;
+      margin: 0 auto;
+      z-index: 100;
       
   }
   
