--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -12,6 +12,7 @@ nav {
   transform: translateX(-50%);
   background: white;
   z-index: 10;
+  box-shadow: 0 2px 6px 0 rgba($color: #000000, $alpha: 0.3);
 
       @include respond(tab-land) {
         padding: 1rem 0;
@@ -39,11 +40,13 @@ nav {
 
   .nav-list {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     gap: 2rem;
     font-size: 20px;
     padding: 0;
+    width: 80%;
+    margin: 0 auto;
 
     @include respond(tab-land) {
           display: none;
@@ -55,16 +58,19 @@ nav {
     
 
     .nav-link {
-      flex-shrink: 0;
-      flex-grow: 0;
       font-weight: bold;
       padding: 1.5rem 1.8rem;
       position: relative;
-      color: black;
       cursor: pointer;
+      flex-grow: 1;
 
       &:first-child {
-        margin-right: 25%;
+        flex-grow: 4;
+      }
+
+      a {
+        text-decoration: none;
+        color: black;
       }
 
     @include respond(tab-land) {
@@ -110,7 +116,7 @@ nav {
           }
 
         &:hover::after {
-          width: 60%;
+          width: 30%;
             @include respond(tab-land) {
               width: 4em;
             }
