--- a/public/sass/layout/_show.scss
+++ b/public/sass/layout/_show.scss
@@ -11,7 +11,7 @@
     z-index: 1;
     background-color: white;
     // width: 50%;
-    padding: 4rem 2rem;
+    padding: 2rem;
     margin-top: 2rem;
     display: flex;
     align-items: baseline;
