--- a/public/sass/layout/_visit.scss
+++ b/public/sass/layout/_visit.scss
@@ -1,57 +1,69 @@
 // visit.ejs
 
 .market-list {
-    position: absolute;
-    top: 20vh;
-    left: 50%;
-    transform: translateX(-50%);
-    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    // column-gap: 25px;
    
-
         .market-list-item {
             color: $tertiary-text-color;
             border-radius: 20px;
             background-color: white;
-            padding: 30px;
-            margin-bottom: 2rem;
-            flex: 1 0 21%; 
-            width: 440px;
-            height: 190px;
+            padding: 40px 30px;
+            margin: 0 auto;
+            margin-bottom: 5%;
+            width: 50%;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
 
-            // box-shadow: 0 4px 16px $shadow-color;
+            &:first-of-type {
+                margin-top: 15%;
+            }
+        
             
             .market-list-content {
-              display: flex;
-              align-items: center;
-            }
+                width: 100%;
+                display: flex;
+                flex-direction: row;
 
-            .market-list-heading {
-                font-weight: 500; 
-                font-size: 20px;
-                margin-bottom: 10px;
-            }
-
-            .market-list-p {
-                font-weight: 300;
-                font-size: 16px;
-                margin-bottom: 5px;
-
-            }
-
-            a {
-                float: right;
-                text-decoration: none;
-                border: 2px solid $tertiary-text-color;
-                border-radius: 10px;
-                color: $tertiary-text-color;
-                letter-spacing: 0.1rem;
-                padding: 10px 20px;
-                font-weight: 500;
-                
-                &:hover {
-                    background-color: $bg-container-color;
+                .market-list-content-text {
+                flex-grow: 1;
                 }
-            }
+                }
+
+                .market-list-heading {
+                    font-weight: 500; 
+                    font-size: 20px;
+                    margin-bottom: 10px;
+                }
+
+                .market-list-p {
+                    font-weight: 300;
+                    font-size: 16px;
+                    margin-bottom: 5px;
+
+                }
+
+                a {
+                    text-decoration: none;
+                    border: 2px solid $tertiary-text-color;
+                    border-radius: 10px;
+                    color: $tertiary-text-color;
+                    letter-spacing: 0.1rem;
+                    padding: 10px 10px;
+                    font-weight: 500;
+                    flex-grow: 1;
+                    margin: auto;
+                    max-width: 20%;
+                    text-align: center;
+                    
+                    &:hover {
+                        color: $primary-green;
+                        border-color: $primary-green;
+                        transform: translateY(2px);
+                    }
+                }
 
         
         }
