--- a/views/farmarkt/show.ejs
+++ b/views/farmarkt/show.ejs
@@ -1,6 +1,6 @@
 <% layout ('layouts/boilerplate') %> 
 
-<section class="secondary-page">
+<section class="section">
     <div id="map"></div>
         <div class="single-market">
             <h5 class="market--title"><%=market.title%></h5>
@@ -14,8 +14,9 @@
 </section>
 
 <script>
-    mapboxgl.accessToken = MAPBOX_TOKEN;
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
     const market = <%- JSON.stringify(market) %>
+    
 </script>
 
 <script src="/js/showMap.js"></script>
