--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,40 +8,26 @@
           <button class="btn" id="nav-toggle"><span class="material-icons">menu</span></button>
         </li>
       
-        <li class="nav-link">For Visitors<span class="material-icons">
-          expand_less
-          </span></i>
-          <ul class="nav-drop">
-            <li><a href="#new">What's New</a></li>
-            <li><a href="#calendar">Calendar</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="/visit">List of Markets</a></li>
-          </ul>
+        <li class="nav-link">
+          <a href="/">Home</a>
         </li>
         
-        <li class="nav-link">For Farmers<span class="material-icons">
-          expand_less
-          </span></i>
-          <ul class="nav-drop">
-            <li>Join Us</li>
-            <li>Markets Rules</li>
-          </ul>
+        <li class="nav-link">
+          <a href="/visit">List of Markets</a>
         </li>
-         
-        <li class="nav-link">Contact</li>
-        <li class="nav-item"><button class="btn">Farmers Login</button></li>
+
+  
+        <li class="nav-link">
+          <a href="/gallery">Gallery</a>  
+        </li>
+
+        <li class="nav-link">
+          <a href="/contact">Contact</a>
+        </li>
+        <!-- <li class="nav-item"><button class="btn">Farmers Login</button></li> -->
         
       </ul>
     </div>
   </nav>
 </header> 
  
- 
-
-          <!-- <form class="search d-flex align-self-center">
-              <input class="search-bar" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn search-button" type="submit"><span class="material-icons">
-                search
-                </span></button>
-              
-            </form> -->
