--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -39,7 +39,7 @@ body {
     font-size: 16px;
     line-height: 1.7;
     padding: 30px 100px;
-    height:100%;
+    // height:100%;
     max-width: 100%;
     margin: 0;
 
@@ -73,9 +73,7 @@ body {
             background-color: white;
             // border-radius: 15px;
             width: 80%;
-            margin: 0 auto; 
-            margin-top: 10%;
-            margin-bottom: 10%;
+            margin: 10% auto; 
         }
 
 }
