--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -383,14 +383,14 @@ footer p {
   padding-top: 2rem;
 }
 
-.todays-markets a, .tomorrows-markets a,
-.todays-markets li, .tomorrows-markets {
-  font-size: larger;
+.todays-markets, .tomorrows-markets,
+.todays-markets a, .tomorrows-markets a {
   text-decoration: none;
   color: black;
+  font-size: large;
 }
-.todays-markets a:is(a):hover, .tomorrows-markets a:is(a):hover,
-.todays-markets li:is(a):hover, .tomorrows-markets:is(a):hover {
+.todays-markets:is(a):hover, .tomorrows-markets:is(a):hover,
+.todays-markets a:is(a):hover, .tomorrows-markets a:is(a):hover {
   background: #C7EFCF;
   border-bottom: 1px solid;
 }
